<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExperimentActivity">

    <Button
        android:id="@+id/btnTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="open_dialog_tags"
        android:text="@string/btnTag" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAPI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/labAPI" />

        <EditText
            android:id="@+id/txtAPI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnAPI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="save_api"
            android:text="@string/btnSave" />
    </LinearLayout>

    <ListView
        android:id="@+id/lstExp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>